cmake_minimum_required(VERSION 3.22)
project(leetcode_cpp)

set(CMAKE_CXX_STANDARD 11)

add_executable(leetcode_cpp main.cpp)

add_executable(test test.cpp)
add_executable(templates templates.cpp)
add_executable(quicksort quicksort.cpp)
add_executable(mergesort mergesort.cpp)
add_executable(m1604 m1604.cpp)

# 面试题
add_executable(zijie1 zijie1.cpp)
add_executable(haikang1 haikang1.cpp)
add_executable(baidu1 baidu1.cpp)
add_executable(dajiang1 dajiang1.cpp)
add_executable(dajiang2 dajiang2.cpp)
add_executable(dajiang3 dajiang3.cpp)
add_executable(wangyi1 wangyi1.cpp)
add_executable(wangyi2 wangyi2.cpp)
add_executable(wangyi4 wangyi4.cpp)
add_executable(weiruan1 weiruan1.cpp)
add_executable(weiruan2 weiruan2.cpp)
add_executable(weiruan3 weiruan3.cpp)
add_executable(weiruan4 weiruan4.cpp)
add_executable(bilibili1 bilibili1.cpp)
add_executable(bilibili2 bilibili2.cpp)

# 链表
add_executable(002 002.cpp)
add_executable(141 141.cpp)
add_executable(148 148.cpp)

# 回溯
add_executable(017 017.cpp)
add_executable(046 046.cpp)
add_executable(051 051.cpp)

# 动态规划
add_executable(322 322.cpp)
add_executable(198 198.cpp)
add_executable(300 300.cpp)


# 二叉树
add_executable(104 104.cpp)
add_executable(543 543.cpp)
add_executable(515 515.cpp)

# 图
add_executable(797 797.cpp)
add_executable(207 207.cpp)
add_executable(210 210.cpp)
add_executable(785 785.cpp)
add_executable(886 886.cpp)
add_executable(130 130.cpp)
add_executable(323 323.cpp)
add_executable(1135 1135.cpp)
add_executable(1584 1584.cpp)
add_executable(743 743.cpp)
add_executable(277 277.cpp)

# 并查集
add_executable(990 990.cpp)
add_executable(261 261.cpp)

# 前缀树 字典树

# 单调栈
add_executable(496 496.cpp)
add_executable(739 739.cpp)

# 单调队列
add_executable(239 239.cpp)

# 二分查找
add_executable(153 153.cpp)

# 字符串
add_executable(2278 2278.cpp)

# 数组
add_executable(1464 1464.cpp)

# 贪心
add_executable(1221 1221.cpp)

# 双指针
add_executable(344 344.cpp)
add_executable(680 680.cpp)
add_executable(011 011.cpp)
add_executable(042 042.cpp)

# 滑动窗口
add_executable(1984 1984.cpp)
add_executable(076 076.cpp)

# 搜索
add_executable(756 756.cpp)





